# Pycroscope

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  codecov.yml  figure_generation_examples.md  original_specification.md  pyproject.toml  pyrightconfig.json  pytest-results.xml  setup.py  test_call_tree_layout.py  test_integration.py  test_styling_fix.py  test_visualization_changes.py
.github/: WORKFLOW_BADGES.md  WORKFLOW_UPDATES.md  pull_request_template.md  validate_workflow.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
docs/examples/: dogfooding_example.py  sample_workload.py  usage_example.py
docs/examples/profiling_results/: profiling_data.json  profiling_report.md
examples/: analysis_demo.py  basic_usage.py  cli_demo.py  foundation_demo.py
profiling_results/: profiling_data.json  profiling_report.md  session.json
pycroscope/: __init__.py
pycroscope/analysis/: __init__.py  base_analyzer.py  complexity_detector.py  correlation_analyzer.py  dynamic_analyzer.py  engine.py  optimization_engine.py  pattern_detector.py  static_analyzer.py
pycroscope/cli/: __init__.py  commands.py  formatters.py  main.py
pycroscope/collectors/: __init__.py  base.py  call_collector.py  cpu_collector.py  exception_collector.py  gc_collector.py  import_collector.py  io_collector.py  line_collector.py  memory_collector.py
pycroscope/core/: __init__.py  config.py  interfaces.py  models.py  profiler_suite.py  registry.py
pycroscope/storage/: __init__.py  file_store.py  memory_store.py  session_comparer.py  session_serializer.py
src/pycroscope/: __init__.py  cli.py  integration.py
src/pycroscope/analysis/: __init__.py  config.py  detectors.py  interfaces.py  orchestrator.py
src/pycroscope/application/: __init__.py  services.py
src/pycroscope/core/: __init__.py  bootstrap.py  config.py  constants.py  container.py  exceptions.py  factories.py  interfaces.py  session.py  strategies.py
src/pycroscope/infrastructure/: __init__.py
src/pycroscope/infrastructure/output/: __init__.py  output_manager.py
src/pycroscope/infrastructure/profilers/: __init__.py  base.py  call_profiler.py  line_profiler.py  memory_profiler.py  orchestra.py  trace_multiplexer.py
src/pycroscope/infrastructure/reporting/: __init__.py  formatters.py  report_generator.py
src/pycroscope/infrastructure/visualization/: __init__.py  call_profiler_plotter.py  chart_generator.py  interfaces.py  line_profiler_plotter.py  memory_profiler_plotter.py  plotters.py
test_context_results/: profiling_report.md  session.json
test_results/: profiling_report.md  session.json
tests/: __init__.py  conftest.py  documentation_check.py  integration_test.py  performance_benchmark.py  pytest.ini  run_tests.py  test_example.py  test_runner.py  verify_installation.py
tests/builders/: __init__.py  config_builder.py  test_data_builder.py
tests/cli/: __init__.py  test_commands.py
tests/core/: __init__.py  test_config.py  test_models.py
tests/integration/: test_end_to_end.py
tests/storage/: __init__.py  test_file_store.py
tests/unit/: test_cli.py
tests/unit/application/: test_services.py
tests/unit/core/: test_config.py  test_container.py  test_exceptions.py  test_session.py  test_strategies.py
tests/unit/infrastructure/: test_formatters.py  test_profilers.py
