[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycroscope"
version = "2.0.0"
description = "Python performance analysis and visualization using established profiling tools"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Adam Murray" }]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Monitoring",
]
keywords = ["profiling", "performance", "optimization", "analysis", "visualization"]

dependencies = [
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "psutil>=5.9.0",
    "line_profiler>=4.0.0",
    "py-spy>=0.3.0;platform_system!='Windows'",
    
    # Visualization and reporting dependencies
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0", 
    "plotly>=5.0.0",
    "pandas>=1.3.0",
    "jinja2>=3.0.0",
    "rich>=12.0.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
pycroscope = "pycroscope.cli:main"

[project.urls]
Homepage = "https://github.com/Adiaslow/pycroscope"
Repository = "https://github.com/Adiaslow/pycroscope"
Documentation = "https://github.com/Adiaslow/pycroscope#readme"
"Bug Tracker" = "https://github.com/Adiaslow/pycroscope/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pycroscope = ["templates/*.html", "templates/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config", 
    "--cov=src/pycroscope",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-report=term-missing",
    "--cov-fail-under=50",
]

[tool.coverage.run]
source = ["src/pycroscope"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstract",
]

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true 